migration to bookhouse

--- a/notebooks/crawl_test.ipynb
+++ b/notebooks/crawl_test.ipynb
@@ -37,21 +37,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ARTICLE_JSON_PATH = \"/opt/shichenh/articles_embedding.json\"\n",
+    "ARTICLE_JSON_PATH = \"/home/bookworm/code/gpt_translate/data/articles_embedding.json\"\n",
     "article_manager = JsonArticleManager(ARTICLE_JSON_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'webdriver_manager'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m webdriver\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchrome\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mservice\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Service\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mwebdriver_manager\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchrome\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ChromeDriverManager\n\u001b[1;32m      5\u001b[0m driver \u001b[38;5;241m=\u001b[39m webdriver\u001b[38;5;241m.\u001b[39mChrome(service\u001b[38;5;241m=\u001b[39mService(ChromeDriverManager()\u001b[38;5;241m.\u001b[39minstall()))\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'webdriver_manager'"
+     ]
+    }
+   ],
    "source": [
-    "# from selenium import webdriver\n",
-    "# from selenium.webdriver.chrome.service import Service\n",
-    "# from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
     "\n",
-    "# driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))"
+    "#driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))"
    ]
   },
   {
@@ -111,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +153,7 @@
        "(40, 4)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "514"
+       "100"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,16 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(514, 4)"
+       "(100, 4)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,20 +220,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://c.m.163.com/news/a/ID297MHD0553JMK2.html?from=subscribe',\n",
-       " 'https://c.m.163.com/news/a/ICTDTVLF0553JMK2.html?from=subscribe',\n",
-       " 'https://c.m.163.com/news/a/ICVK2LGB0553JMK2.html?from=subscribe',\n",
-       " 'https://c.m.163.com/news/a/ICTP928F0553JMK2.html?from=subscribe',\n",
-       " 'https://c.m.163.com/news/a/ICT6LC0Q0553JMK2.html?from=subscribe']"
+       "['https://c.m.163.com/news/a/JLQ8GGF80553JMK2.html?from=subscribe',\n",
+       " 'https://c.m.163.com/news/a/JLP4SLC00553JMK2.html?from=subscribe',\n",
+       " 'https://c.m.163.com/news/a/JLNQN3BU0553JMK2.html?from=subscribe',\n",
+       " 'https://c.m.163.com/news/a/JLMJ9S0V0553JMK2.html?from=subscribe',\n",
+       " 'https://c.m.163.com/news/a/JLL8PTMK0553JMK2.html?from=subscribe']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,16 +245,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(483, 4)"
+       "(80, 4)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,290 +265,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'1888万的彩礼，只是个忽悠富老头没成功的案例',\n",
-       " '200岁的巴菲特大会上只有一句投资秘诀值得分享',\n",
-       " '2023年，又有人来问当下的职业选择，婚姻选择',\n",
-       " '211毕业五年存款只有五千，与贷款延长到90岁',\n",
-       " '35岁求职嫌老，60岁退休嫌早',\n",
-       " '98%无症状的专家发烧了，他正在亲自体会无症状',\n",
-       " 'AI取代人类的劳动价值，和它取代你的所有价值，是两码事',\n",
-       " 'AI把代码写了，把PPT也写了，那咱们去干嘛呢？',\n",
-       " 'B站的大V们为什么纷纷断更了？',\n",
-       " 'GPT真正的威胁并不是马斯克联手上千名科技大佬与专家说的那些',\n",
-       " 'chatGPT唯一的价值，只在于告诉虎妈，你鸡娃鸡错方向了',\n",
-       " 'chatGPT暂时还取代不了老胡',\n",
-       " 'chatGPT来了，我那位领五倍薪的北大助理慌了吗？',\n",
-       " 'chatGPT还真的不是纸老虎',\n",
-       " '“吊打”上司的这位勇敢的成都员工，面临人生重大机遇',\n",
-       " '“套套”怎么做才能搞定美国听证会？',\n",
-       " '《天道》是一部杀人诛心的剧',\n",
-       " '《天道》里的丁元英是编剧理解的高手',\n",
-       " '《满江红》：如果历史真能假设，我希望这样魔改',\n",
-       " '《狂飙》比《三体》好，好就好在拍着拍着跑题了',\n",
-       " '一板2块钱的退烧药，却遭遇上亿天价罚款，为什么？',\n",
-       " '丈母娘为什么执着于让女婿买房？',\n",
-       " '三体拍不好，一点都不稀奇',\n",
-       " '上海医护发6000，为什么？有钱',\n",
-       " '不动产统一登记和你我，只有一件事有关',\n",
-       " '不同国家，不同城市，卷的程度',\n",
-       " '不知道什么时候开始，流行晒书房了',\n",
-       " '不该说的，我也说了',\n",
-       " '不该说的，说出来，你也未必能get到那个点',\n",
-       " '不问男友要彩礼，拿什么给弟弟做彩礼？',\n",
-       " '与其一股脑的批评爱上毒枭的小说，倒不如考虑文字分级',\n",
-       " '专家说年轻人工资低是因为能力不够？',\n",
-       " '专门聊长三角',\n",
-       " '个人养老金，是否会像美国养老金那样长期投入股市？',\n",
-       " '中产实际上在分化',\n",
-       " '中金的数据，13亿人月收入低于5000？真的吗？',\n",
-       " '为什么三大影帝联手都阐释不清洗钱这么简单的事儿？',\n",
-       " '为什么我反复跟你讲美联储短期内难以降息？',\n",
-       " '为什么时隔三年，我对医护发烧硬顶的观点是不同的？',\n",
-       " '为什么能力不如你的人，偏偏做了合伙人？',\n",
-       " '为什么这个胡扯的美国教授，没有学生冲上去抢他的话筒？',\n",
-       " '为什么这么喜欢议论年味儿淡了，却不想想，年是什么来的？',\n",
-       " '人世间不是只有妈妈和走狗',\n",
-       " '人世间没有什么是忽然发生的，无非你忽然才知道',\n",
-       " '人口下降的趋势下，毕业后去哪个城市混？',\n",
-       " '人口负增长这个话题，你看到的是什么？',\n",
-       " '人和人之间，绝大多数时空下，都是分层的',\n",
-       " '人没吃饱就只有一个烦恼，吃饱了终日被烦恼所扰',\n",
-       " '人生没有返航，谁都只能继续前进',\n",
-       " '人类又何尝不是一只火鸡',\n",
-       " '人类未必需要罗辑，但肯定需要“虚头八脑”',\n",
-       " '人这辈子，就那回事，别较劲',\n",
-       " '什么叫“老钱”？其实就是肮脏且安全',\n",
-       " '从CPI与PPI都很低，聊到房地产市场',\n",
-       " '从成龙与赤兔，到天门山跳崖案',\n",
-       " '从老白，炸鸡哥到曹操和巴菲特',\n",
-       " '任泽平剑指司马南，储殷为了博眼球，最后还得是老胡和稀泥',\n",
-       " '企业，高校，学生，这三者有没有建立配合关系？',\n",
-       " '你不仅不了解美国，你甚至不了解自己',\n",
-       " '你之所以能大闹天宫，是因为有人让你大闹天宫',\n",
-       " '你们从来都没有读懂过阿Q',\n",
-       " '你懂绿茶？不，你懂了个寂寞',\n",
-       " '你把自己当成了时代的客户，我把自己当成了时代的小二',\n",
-       " '你有没有想过？也许那个正确选项根本不存在',\n",
-       " '你看过白鹿原，但你不一定看懂过白鹿原',\n",
-       " '你真以为全网都在指望挨王思聪一顿打，喜提几百万年终奖么？',\n",
-       " '你陷在做题思维里，当然听不懂我在说什么',\n",
-       " '借成都造谣男，我来给你上一堂博弈课',\n",
-       " '假如遇到一个完美地，和成都那个截然相反的上司',\n",
-       " '全世界都在抢人？',\n",
-       " '关于厉以宁，你要注意他的年龄',\n",
-       " '关于无症状数据不靠谱的账，现在不是算的时候',\n",
-       " '其实大V这种角色，和律师有某些相似之处',\n",
-       " '其实这代人的压力，比父辈祖辈还要大',\n",
-       " '写给一位妻离子散的投资人读者',\n",
-       " '刀不磨就不锋利，刀太锋利了就容易断，人也一样',\n",
-       " '刘强东回国开工与能用人工尽量不用机械的告示，一起上了热搜',\n",
-       " '别傻了，你真以为中年人分成功型和废物型？',\n",
-       " '别看倒卖儿童退烧药的黄牛现在笑，有他们哭的时候',\n",
-       " '别说阅读有门槛，哪怕低级趣味，也是有门槛的',\n",
-       " '到底为什么读书？这场学生抢了教授话筒的辩论',\n",
-       " '劝老百姓拿出1/3存款买房的专家，有点像达文西',\n",
-       " '十八线女明星与老男人的瓜值得切么？',\n",
-       " '参与高频交易早晚被AI干掉，而交易本身，没那么快',\n",
-       " '又不是只有你一个人觉得人世间很魔幻',\n",
-       " '又见“防止房价重回过快上涨”的提法',\n",
-       " '古代的秦始皇，没有今天的乞丐幸福么？',\n",
-       " '司马懿高平陵之变指渭水发誓，从此再也没有了退出机制',\n",
-       " '同样开罪消费者，为啥市场对张小泉与宝马的反应截然相反？',\n",
-       " '听一群人瞎解读M2，我笑了',\n",
-       " '听专家扯什么把退休金与疫苗挂钩，不如看看欧美日的经历',\n",
-       " '周鸿祎的老婆，徐翔的老婆，四年前跳楼的苏享茂的老婆',\n",
-       " '和我杠M2？你娃儿先回去弄清楚什么是贷款发行吧',\n",
-       " '哪怕没有AI，独生子女环境下你也绕不开孔乙己的长衫',\n",
-       " '商人谁都可以骗，唯独不能骗自己',\n",
-       " '啥是铁饭碗？',\n",
-       " '回答读者关于国内市场的五个问题',\n",
-       " '回老家是啃老，亦或者掏空父母继续在城里供房是啃老？',\n",
-       " '因爱生恨，求职不得的造谣我龙哥，他究竟点燃了什么？',\n",
-       " '在什么样的社会下，学历才会是孔乙己的长衫？',\n",
-       " '在某些观众眼里，高启强就是另一个祁同伟',\n",
-       " '在生育话题上，四川走在了最前面',\n",
-       " '在胡某宇这件事上，唯一不反思的就是成天让人反思的互联网',\n",
-       " '基建的尽头是人口',\n",
-       " '外贸订单很少，意味着什么？',\n",
-       " '大V里面有坏人',\n",
-       " '大多数人注定是脱离不了低级趣味的',\n",
-       " '天门山四名年轻人之后，又有三名年轻人在林场轻生',\n",
-       " '她输掉的是四百万还是十二年？',\n",
-       " '如何操控你老板的预期',\n",
-       " '如何正确的吃张继科和景甜的瓜',\n",
-       " '如果你死盯着叶文洁发坐标，你就没看懂刘慈欣',\n",
-       " '如果电影这么总结中国男乒的胜利，那男足的失败又怎么说？',\n",
-       " '如果签个协议就能挣钱，这么容易凭什么轮到你挣呢？',\n",
-       " '如果送外卖也不赚钱了',\n",
-       " '婚姻是不可能解决孤独感的',\n",
-       " '字越少，事越大',\n",
-       " '宇宙的尽头是考编？',\n",
-       " '宝马MINI为几盒冰激凌跌的这150亿，不冤',\n",
-       " '家长的催婚催生，为什么在95后这里不灵了？',\n",
-       " '尿壶理论的关键不在于壶，而在于尿',\n",
-       " '屡屡下架不让播，它到底拍了什么内容？',\n",
-       " '岳飞要成事儿，最缺什么？',\n",
-       " '已有6亿栋房屋',\n",
-       " '市场可以被引导，但是不能被左右，医生也是一回事',\n",
-       " '年轻人卷的程度已经让我们这代人瞠目结舌了',\n",
-       " '年轻人，你只能去赚想象力的钱',\n",
-       " '年过了，你还活着，我还活着，这才是时间的朋友',\n",
-       " '延迟退休与退休金和生育挂钩',\n",
-       " '张三丰为什么让张无忌忘掉？',\n",
-       " '张朝阳和刘銮雄都没有欺骗年轻人',\n",
-       " '张继科的问题并不仅仅是赌博',\n",
-       " '很多人都喜欢聊资本，但并不理解什么是资本',\n",
-       " '很多富豪去了新加坡，导致坡县房价大涨吗？',\n",
-       " '很多聊马云的，根本不知道他这人最大的优点是啥',\n",
-       " '怎么才能穿上鲁迅的长衫而不是孔乙己的长衫',\n",
-       " '怎么理解温老上热搜的这些话',\n",
-       " '怎么看城投债这件事？',\n",
-       " '怎么看多孩降税率，三孩公租房的建议？',\n",
-       " '怎么看硅谷地区，以及其他地区科技公司，例如微软的大裁员',\n",
-       " '怎么看老胡的传统医学姐姐给他的药汤子？',\n",
-       " '怎么看西虹市里的“当狗有什么不好？”',\n",
-       " '怎么看这个建议50万以上存款收利息税的专家？',\n",
-       " '怎么看这份“停止向未成年人提供网游”的提案',\n",
-       " '成熟的人都是用人朝前，不用人朝后的',\n",
-       " '我也进入要阳的倒计时了，给读者打个预防针',\n",
-       " '我从来也没有让你们准备过那么多药品和防疫物资',\n",
-       " '我从来都没忽悠过年轻人，因为我也年轻过',\n",
-       " '我们今天不聊宝马，我们今天就聊洗脚',\n",
-       " '我们回不去了，也没必要回去，你应该去研究新的消费者心理',\n",
-       " '我们的人，同时活在白鹿原，维多利亚和共识经济时代',\n",
-       " '我们那时候很穷，但是很放松',\n",
-       " '我去医院不是阳，而是打疫苗',\n",
-       " '我可以告诉你一个我五岁的时候就知道的秘密',\n",
-       " '我和你们当中绝大多数人，有本质上的不同',\n",
-       " '我并不能共情林平之，但是我尊重每个人的选择',\n",
-       " '我想聊隐学，一群人却忙着围观美女副局长的绿帽子',\n",
-       " '我是不肯在沿海城市送外卖的，我宁愿跑去西部',\n",
-       " '我用华尔街的故事给你重读一遍胡歌的《县委大院》',\n",
-       " '扫地僧跟鸠摩智说的那番话什么意思？',\n",
-       " '扬州美女副局长和王公子打人案，都只是在教你认识人性',\n",
-       " '找大V代炒股，从330万亏成18万，这个妈妈自己没责任么？',\n",
-       " '把AI看作国与国竞争的人，还停留在工业革命时代',\n",
-       " '把话题引回国内，我们聊聊消费',\n",
-       " '抢老师话筒，不意味着不尊师重道',\n",
-       " '抢购蒙脱石散的不只是荒诞',\n",
-       " '报复性消费来了？',\n",
-       " '拖至今天，我们才写胡某宇事件',\n",
-       " '择偶就注定了不平等',\n",
-       " '提前还房贷，事情没你想的那么简单',\n",
-       " '放开的拥趸们，还是要学会理解真实的人生',\n",
-       " '救人先救医',\n",
-       " '教你换个角度看古代神话故事',\n",
-       " '数字货币本质上是USB和USA的分歧',\n",
-       " '无论姓氏还是婚姻，都在发生深刻的变化',\n",
-       " '日本年轻人是低欲望还是想通了？',\n",
-       " '日韩这种对我们游客的歧视，靠骂是解决不了的',\n",
-       " '时代的一粒灰与个人的一座山',\n",
-       " '春晚引人思考的并不是沈腾的小品《坑》',\n",
-       " '昨天最重要的消息，关系未来的十几年',\n",
-       " '有个年轻的读者问我：他能不能学高启强？',\n",
-       " '有些人这辈子大概是来还债的',\n",
-       " '有意思的不是懂王的美国梦已死，而是这么多人盯着他的下半身',\n",
-       " '有没办法打破985，211排序的招聘手段？',\n",
-       " '有没有想过，你到底为什么要退出江湖？',\n",
-       " '未婚生育其实只牵扯两件事，财产继承与姓氏随母',\n",
-       " '欧佩克减产与人民币出海',\n",
-       " '没有报复性的收入，哪儿来的报复性的消费？',\n",
-       " '没有樱木花道的时代，只有时代的樱木花道',\n",
-       " '没有神药，只有神医',\n",
-       " '没有铁饭碗，又哪儿来的铁婚姻？',\n",
-       " '流浪地球2：你想过没有，人类存在的意义是什么？',\n",
-       " '润不难，难的是，接下来咋办？',\n",
-       " '满嘴钱的未必不伟大，满嘴真爱的未必不自私',\n",
-       " '漫长的季节完全不同于隐秘的角落',\n",
-       " '炫富很不该，但是低欲望，也很糟糕',\n",
-       " '父母的催生，很多时候也只是想再一次见到你',\n",
-       " '物质上有没有恒产？精神上有没有恒心？',\n",
-       " '生育率低的本质',\n",
-       " '男人光靠听真话，是成不了事的，女人也一样',\n",
-       " '男人最大的优势就是听真话，从来都是免费的',\n",
-       " '男人有两大爱好，拉良家下水，劝风尘从良',\n",
-       " '男人比女人最大的优势就在于更少被欺骗',\n",
-       " '男孩子是怎么变成男人的？',\n",
-       " '疫情有可能改变老人的观念，高端养老或许是条路',\n",
-       " '百度AI文心一言的翻车，并不全是中美技术差距引起的',\n",
-       " '看到这个给自己办葬礼的老人，我呆了',\n",
-       " '看看这些科学家和医生们关于病毒之争',\n",
-       " '真正卡脖子的不是芯片，是你如何得知，什么是未来的“芯片”',\n",
-       " '真正的大佬，都是吃软饭的',\n",
-       " '真正让你脱不掉孔乙己长衫的，是我们的农村社会形态',\n",
-       " '硅谷银行踩雷事小，美国底线暴露事大，咱们的读者有高见',\n",
-       " '硅谷银行踩雷和西边的太阳就要落山了之间有无关系？',\n",
-       " '社会化抚养这个构思哪儿哪儿都好，就只有一个问题，想知道么？',\n",
-       " '等了二十多年，中国人终于拿到了星际争霸的冠军',\n",
-       " '给上海痴情公子上课的并非江西彩礼女，而是富老头',\n",
-       " '给人拎包当马仔时的那些心得体会',\n",
-       " '给林场要水的网红的确是商人，但商人也分很多种',\n",
-       " '维权的特斯拉车主们，还沉浸在旧价值观里么？',\n",
-       " '网民围观扬州美女副局长，到底在围什么？',\n",
-       " '网络上热议的马云回国',\n",
-       " '罗永浩和被他忽悠过的那些富老头们',\n",
-       " '罪犯子女考公这事儿，老胡和罗翔都只看到一个侧面',\n",
-       " '美元不是我们的对手，美元是我们的开机引导程序',\n",
-       " '美国氯乙烯泄露，真的是像这些大V们说的那样么？',\n",
-       " '美国近期强劲的经济数据预示着年底的衰退不会到来了么？',\n",
-       " '美联储第十次加息与五一的数据',\n",
-       " '美联储这次25个点的加息，是不是我去年讲的转折点？',\n",
-       " '翻车的是念错字的星二代黄多多吗？',\n",
-       " '老公如果醒不过来炒股梦，就让他读读西游记',\n",
-       " '老胡终于说实话了',\n",
-       " '聊完M2，我们看看什么是房产价值',\n",
-       " '聊聊海南，聊聊做局',\n",
-       " '职场是个生态链，并不是谁牛谁挣钱',\n",
-       " '肉体是有国界的，精神也是有国界的',\n",
-       " '胡歌+阳光，《县委大院》为啥还是火不了？',\n",
-       " '自媒体一股脑的批这个贵阳相亲的公职男，有啥劲？',\n",
-       " '至于么？司马南又不是司马懿',\n",
-       " '致一个担心自己丢掉工作的中学老师',\n",
-       " '致一位即将考研却阳了发烧的考生',\n",
-       " '若非梁朝伟郭富城，我还以为是二弟与大嫂不得不说的故事',\n",
-       " '被资助八年做主妇的女生，你看到了是非，我看到了无奈',\n",
-       " '要不要造车，任正非和余承东之间，该站谁？',\n",
-       " '要避免的，不是死于病毒，而是死于混乱',\n",
-       " '谁告诉你日本人讲理？',\n",
-       " '资助八年的女孩大学毕业后嫁人做主妇有啥好失望的？',\n",
-       " '趁着西域五王齐聚长安，我忽然想聊聊罗马',\n",
-       " '超导心态比室温超导这篇燃爆全球的论文更值得聊一聊',\n",
-       " '跪地求水林场主事件里面真正要救的，不是树',\n",
-       " '车企大降价与上了头条的缩编5%',\n",
-       " '这个中学生眼里的挣钱与民族复兴',\n",
-       " '这个疫情结束后找不到工作的北漂和他三次考不上研的哥们',\n",
-       " '这些大V，就像六大派和明教一样水火不容',\n",
-       " '这对攒了300万选择退休的80后上海丁克夫妻',\n",
-       " '这次如果你要买房，一定要把房产税问题考虑在内',\n",
-       " '这次换梁朝伟当大哥，王一博和嫂子有故事么？',\n",
-       " '连老婆炫富也降级......',\n",
-       " '退休大佬又一次提起房地产税',\n",
-       " '透过淄博烧烤如何研究经济？',\n",
-       " '通胀的姊妹篇，M2之后聊汇率',\n",
-       " '通过不动产私募基金，来给你理一理投资分析模型',\n",
-       " '重点不是首套房贷款利率浮动，重点是你要不要买房？',\n",
-       " '重磅话题，疫情之下，聊聊经济',\n",
-       " '长江七号里的星爷，他一开始就已经进入死胡同了',\n",
-       " '阳了之后的五天与一个外国医生的对话',\n",
-       " '阿凡达1和2，是大闹天宫和西天取经的距离么？',\n",
-       " '随着全球贸易重组，美元是不是要消失了？',\n",
-       " '需要关心的不是我，是那些农村的老头老太太！',\n",
-       " '青黄不接的时候，\\u200b最需要的是什么？',\n",
-       " '香港发生的这起命案',\n",
-       " '马斯克的宏伟蓝图',\n",
-       " '马斯克的星舰爆炸后，两种截然不同的欢呼同时响起',\n",
-       " '高启强不是闰土，他是猹',\n",
-       " '高启强？出身寒微不是耻辱，能屈能伸方为丈夫？',\n",
-       " '魏王为什么不把商鞅杀了，省得他入秦灭魏？'}"
+       "{'2025年，哪些是不变的，哪些是万变的？',\n",
+       " '2025，不要一年到头又白忙\\u200b',\n",
+       " '35岁之后，还能怎么找到工作？',\n",
+       " '\\u200b老天爷给每个人都留有了路，但你要知道什么属于你',\n",
+       " '“如何让女大学生服服帖帖、老老实实生孩子？”',\n",
+       " '一个焦虑的读者，想知道什么是最好的买房策略',\n",
+       " '上学读书是为了训练你的身体，不是你的大脑',\n",
+       " '上岸不等于没工作压力，更不等于工作轻松',\n",
+       " '上岸的老公，适不适合教人家考试经验？',\n",
+       " '不是你买基金赚不到钱，而是你绕不开四个陷阱',\n",
+       " '不是所有的劳苦功高都能变成钱的',\n",
+       " '中美的股市楼市，并不是同一个逻辑',\n",
+       " '为什么黄教主也会栽在珂学手里？',\n",
+       " '为啥读书好的未必混得好？',\n",
+       " '为啥这些“赘婿经济学家”们总喜欢拿越南美国和国内比',\n",
+       " '人活着不是为了吃苦，犯不着没苦硬吃',\n",
+       " '从心里抛弃他，你会遇到更好的',\n",
+       " '你不是学不会投资，你只是缺个好爸爸',\n",
+       " '你对自己这么抠，活该没有女人爱你',\n",
+       " '你想知道的一切，这个足浴技师都能回答你',\n",
+       " '你没看懂萧山赘婿成功故事背后那些不为人知的原因',\n",
+       " '你理解的没错，秘密就在于祁同伟的惊天一跪',\n",
+       " '你研究房价之前首先要读懂这四个字',\n",
+       " '你虽然没念过大学，但你的前途一片光明',\n",
+       " '你都没看懂过那些国际大炒家的手法',\n",
+       " '假如人人都说真话',\n",
+       " '关于专家们热议的取消公摊面积的这点事儿',\n",
+       " '养老的重点，从来都不在于养老金怎么交',\n",
+       " '到底要不要送孩子出国留学？',\n",
+       " '努力有什么用？也抵不上人家二代',\n",
+       " '双非冷门，怎么转专业可以逆袭去大厂？',\n",
+       " '只要你能学会泡妞，就没可能学不会升职加薪',\n",
+       " '哪怕你不欣赏他，你也很清楚，这个社会欣赏他',\n",
+       " '四十多岁才明白，来不来得及？',\n",
+       " '国内韭菜图鉴',\n",
+       " '天下武功出少林，天下投资出套利',\n",
+       " '天天上班都不知道自己这辈子在活什么劲',\n",
+       " '如果华尔街之狼来改造大厂领导的“爹味发言”',\n",
+       " '孩子不开悟，家长很着急',\n",
+       " '孩子见识开阔之后，会不会导致他眼高手低？',\n",
+       " '巨变已至，除了迎合，我们别无选择',\n",
+       " '已访问浙大的段永平，拟收购格陵兰的特朗普',\n",
+       " '很多时候你能赚什么钱，是你所处的环境决定的',\n",
+       " '我从来都没见谁逆袭过',\n",
+       " '我没有在说反话，洛杉矶大火还真体现了美国的优势',\n",
+       " '把事情系统化，岂不是第一个被裁的就是我？',\n",
+       " '无人机专家辞世前的话：创业的尽头是负债',\n",
+       " '无儿无女的86岁北大老太太晚年幸福么？',\n",
+       " '时间不经浪，人生不经晃，辛苦一年到头又空忙',\n",
+       " '昨天的会议就是最佳的预期管理',\n",
+       " '是不是在国内一直做技术不会有前途？',\n",
+       " '最搞笑的就是在融资市场里研究价值投资',\n",
+       " '有命赚，要有命花，赌场里赢的钱，要能带得出去',\n",
+       " '未来财富诞生的模式，和过去并不一样',\n",
+       " '比原生家庭更大的坑，是原生环境',\n",
+       " '汇率升值是不是意味着经济好？',\n",
+       " '没有哪个大佬会因为溜须拍马舔腚就带你飞',\n",
+       " '照着做，你早晚会成为那帮既得利益群体里的一分子',\n",
+       " '琼瑶面对命运的方式，比她告别人间的方式，更值得聊',\n",
+       " '男人没出息，老婆照样有可能从一而终的',\n",
+       " '祥子到死都没明白，并不是他车拉的不好',\n",
+       " '穷光蛋和穷光蛋，是不一样的',\n",
+       " '突发，美国关税不及预期？转折，上面那条报道不实？',\n",
+       " '经济学家对宏观经济的议论纷纷让你焦虑了吗？',\n",
+       " '老婆给老板当助理多年，上市前老板却不肯分她股份',\n",
+       " '蓝领何止是蓝海，蓝领是蓝色的太平洋',\n",
+       " '被七家企业高薪疯抢的17岁中专生，释放了什么信号？',\n",
+       " '要不要考虑把儿子送去日本入赘，分富豪的家产？',\n",
+       " '讨厌门阀，理解门阀，研究门阀，利用门阀',\n",
+       " '误杀太多次，那就是谋杀',\n",
+       " '赚钱如吃屎，亏钱如抽筋',\n",
+       " '金庸的污点遮不住他的成就；琼瑶的成就遮不住她的污点',\n",
+       " '金融，它不是一个行业，它是伪装成行业的全社会',\n",
+       " '霸总没有爱上保洁大妈，而是把大妈推下了海'}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,16 +358,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "208"
+       "6"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +386,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gpt_translate",
+   "display_name": "gpt-translate",
    "language": "python",
    "name": "python3"
   },
@@ -589,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
